# SDLInterface

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  readme.md
include/: Button.h  EventData.h  FontManager.h  MyComponent.h  MyComponent2.h  SDLApp.h  SDLComponent.h  TextureManager.h  Widget.h  WidgetManager.h
src/: Button.cpp  FontManager.cpp  MyComponent.cpp  MyComponent2.cpp  SDLApp.cpp  SDLComponent.cpp  TextureManager.cpp  WidgetManager.cpp  main.cpp
